--- a/projeto_art/index.html
+++ b/projeto_art/index.html
@@ -93,7 +93,8 @@
           <a href="#"><i class="bi bi-twitter secondary-color"></i></a>
         </div>
       </div>
-      <p class="secondary-color">Art &copy; 2021</p>
+      <p class="secondary-color">
+        Art &copy; 2021</p>
     </footer>
   </div>
 </body>
